06.Services&Networking/ClusterIP-service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP # default is ClusterIP
  ports:
    - targetPort: 80 # if not given it will be similar to "port"
      port: 80 # this is the only mandatory field
  selector:
    app: myapp
    type: back-end
