06.Services&Networking/NodePort-service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
    - targetPort: 80 # if not given it will be similar to "port"
      port: 80 # this is the only mandatory field
      NodePort: 30008 # if not given it randomly picked from 30000 to 32,767
  selector:
    app: myapp
    type: front-end
