06.Services&Networking/ingress-wear-watch.yml
#1 rule 2 paths - 1 url to two paths: /wear /watch
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress-wear-watch
spec:
  rules:
    http:
      paths:
      - path: /wear
        backend:
          serviceName: wear-service
          servicePort: 80
      - path: /watch
        backend:
          serviceName: watch-service
          servicePort: 80
