06.Services&Networking/ingress-wear.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
name: ingress-wear
spec:
  backend:
    serviceName: wear-service
    servicePort: 80
